--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "bin/tests/integration/components/cron_callback",
     "bin/tests/integration/components/staked_ada_indexer_mock",
     "bin/tests/integration/components/ipfs_subscribe",
+    "bin/tests/integration/components/doc_sync_subscribe",
 ]
 default-members = [
     "bin",
