--- a/hermes/bin/tests/integration/components/doc_sync_subscribe/Cargo.toml
+++ b/hermes/bin/tests/integration/components/doc_sync_subscribe/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ipfs_subscribe"
+name = "doc_sync_subscribe"
 version = "0.1.0"
 edition.workspace = true
 license.workspace = true
