fix(p2p): Implement on-topic handler and bootstrap discovery for PubSub
  PubSub messages were published successfully but never received because
  the doc-sync module was missing the hermes:ipfs/event.on-topic handler.
  The runtime dispatches PubSub messages as OnTopicEvent, but the module
  only exported hermes:doc-sync/event.

  Additionally, docker-compose.yml has hardcoded bootstrap peer IDs that
  become stale when volumes are deleted, causing [wrong peer id] errors.

  Changes:
  - Add hermes:ipfs/event export and on-topic handler to doc-sync module
  - Add detailed PubSub logging throughout publish/receive path
  - Add init-bootstrap command to sync docker-compose.yml after volume deletion
  - Document PR#694 persistent keypairs (already working, just needed docs)
  - Clarify when init-bootstrap is needed (after clean, not after restart)

--- a/p2p-testing/docker-compose.yml
+++ b/p2p-testing/docker-compose.yml
@@ -1,11 +1,15 @@
 # Docker Compose for Hermes P2P Testing
 # Simulates multiple computers running Hermes with isolated networks
 #
-# IMPORTANT: Before running, build artifacts with Earthly for cross-platform compatibility:
-#   just get-local-hermes    # Containerized build (GLIBC-compatible)
-#   just get-local-athena    # WASM build + packaging
+# QUICK START:
+#   just build-all && just build-images  # Build everything
+#   just init-bootstrap                  # Sync bootstrap peer IDs (required first time)
+#   just test-pubsub                     # Verify PubSub works
 #
-# Or simply run: ./start-nodes.sh (handles builds automatically)
+# BOOTSTRAP PEER IDs:
+#   IPFS_BOOTSTRAP_PEERS below contain hardcoded peer IDs that must match
+#   actual keypairs in Docker volumes. Run 'just init-bootstrap' to sync
+#   after 'just clean' or first setup. See justfile for details.
 
 services:
   hermes-node1:
