fix(p2p): Ensure start-ci always begins from clean state
  Add automatic cleanup to start-ci command to guarantee reproducible
  CI environment. The command now checks for running nodes and executes
  docker compose down -v before building and starting.

  This ensures CI runs are always deterministic by:
  - Removing stale containers and volumes
  - Forcing fresh peer identity generation
  - Preventing state pollution between runs

  Simplifies CI workflow to single command: just start-ci && just test-ci

--- a/p2p-testing/justfile
+++ b/p2p-testing/justfile
@@ -135,11 +135,18 @@ start:
     echo ""
     just status
 
-# Start nodes (CI mode: no prompts, always rebuilds)
+# Start nodes (CI mode: no prompts, always rebuilds from clean state)
 start-ci:
     #!/usr/bin/env bash
     set -euo pipefail
     echo "🚀 Starting P2P test environment (CI mode)..."
+
+    # Ensure clean state
+    if docker compose ps | grep -q "Up"; then
+        echo "🧹 Cleaning existing environment..."
+        docker compose down -v
+    fi
+
     just build-ci
     just init-bootstrap
     echo ""
